--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Empack</h1>
+        <h1>Driving Development</h1>
     </main>
     <script src="app.js"></script>
 </body>
