--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    <div id="cursor">
+        <div id="cursor-shape"></div>
+    </div>
     <main>
         <h1>Driving Development</h1>
     </main>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
